<resources>
    <string name="app_name">Citizen App</string>
    <string name="hintPassword">Password</string>
    <string name="Forgot_Password"><u>Forgot Password?</u></string>
    <string name="LoginUsing">Or Login Using</string>
    <string name="txtFacebook">Facebook</string>
    <string name="hintEmailOrMobile">Email | Mobile No.</string>
    <string name="txtGooglePlus">Google+</string>
    <string name="txtLinkedIn">Linkedin</string>
    <string name="Name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="VerifyOTP"><u>Verify OTP</u></string>
    <string name="Resend"><u>Resend</u></string>
    <string name="resetPasswordText">Please enter your registered E-mail-ID for a password reset link.</string>
    <string name="submit">Submit</string>
    <string name="Thank_you">Thank you for your request.\nA password reset link has been sent to your email address.</string>
    <string name="OK">Ok</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="EnterEmail">Please enter your Email ID</string>
    <string name="EnterValidEmail">Please enter valid Email ID</string>
    <string name="EnterPassword">Please enter your password</string>
    <string name="EnterName">Please enter your Name</string>
    <string name="EnterMobile">Please enter your Mobile Number</string>
    <string name="EnterValidMobile">Please enter valid Mobile Number</string>
    <string name="PasswordValidation">Password should be in minimum 8 characters</string>
    <string name="my_family">My Family</string>
    <string name="book_appointments">Book Appointments</string>
    <string name="orange_wallet">Orange Wallet</string>
    <string name="more">More</string>
    <string name="todays">Todays</string>
    <string name="upcoming">Upcoming</string>
    <string name="missed">Missed</string>
    <string name="administered">Administered</string>
    <string name="noAppointments">No Appointments Booked</string>
    <string name="atClinic">At Clinic</string>
    <string name="atHome">At Home</string>
    <string name="patientName">Patient Name</string>
    <string name="hintChildDHCode">Dh Code | Mobile No</string>
    <string name="textOR">OR</string>
    <string name="hintChildName">Name of the Child</string>
    <string name="child">Child</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="timeOfBirth">Time Of Birth</string>
    <string name="parent">Parent</string>
    <string name="guardian">Guardian</string>
    <string name="hintName">Name</string>
    <string name="hintEmail">Email</string>
    <string name="textAdd">Add</string>
    <string name="available_inventory">Available Inventory</string>
    <string name="vaccinate">Vaccinate</string>
    <string name="hintPatientName">Patient Name</string>
    <string name="inventory">Inventory</string>
    <string name="dialog_message_done">Done</string>
    <string name="dialogDeleteConsultation">Are you Sure?\nYou want to cancel todays appointment.</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="textMissed">Missed</string>
    <string name="textAdministered">Administered</string>
    <string name="alreadyAdministered">Already Administered</string>
    <string name="doctorNameHint">Doctor Name</string>
    <string name="clinicNameHint">Clinic Name</string>
    <string name="dateAdministerHint">Date of Administer</string>
    <string name="patientInfo">D.O.B : %1$s | %2$s | OPI:%3$s</string>
    <string name="myProfile">My Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="accounts">Accounts</string>
    <string name="hintDesignation">Designation</string>
    <string name="hintSpecialization">Specialization</string>
    <string name="hintYearsOfExperience">Years of Experience</string>
    <string name="hintClinicName">Clinic Name</string>
    <string name="hintAddress">Address</string>
    <string name="hintEmailId">E-Mail ID</string>
    <string name="hintMobile">Mobile</string>
    <string name="update">Update</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="practiceStartDate">Practice Start Date</string>
    <string name="addAccount">Add Account</string>
    <string name="editClinic">Edit Clinic</string>
    <string name="deleteClinicMessage">Are you Sure?\nYou want to remove Clinic.</string>
    <string name="hintConsultationFee">Consultation Fee</string>
    <string name="hintClinicTimings">Clinic Timings</string>
    <string name="Monday_text">Mon</string>
    <string name="Tuesday_text">Tue</string>
    <string name="Wednesday_text">Wed</string>
    <string name="Thursday_text">Thu</string>
    <string name="Friday_text">Fri</string>
    <string name="Saturday_text">Sat</string>
    <string name="Sunday_text">Sun</string>
    <string name="consultationAtHomeText">Consultation at Home</string>
    <string name="noAccountsAdded">No Accounts Added</string>
    <string name="txtChange">change</string>
    <string name="firstName">First name</string>
    <string name="middleName">Middle name</string>
    <string name="lastName">Last name</string>
    <string name="buildingName">Building Name</string>
    <string name="doorNo">Door no</string>
    <string name="streetName">Street Name</string>
    <string name="areaName">Area Name</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="gender">Gender</string>
    <string name="register">Registered By</string>
    <string name="district">District</string>
    <string name="townorcity">Town/City</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="save">Save</string>
    <string name="clinicNameValidation">Enter Clinic Name</string>
    <string name="buildingNumberValidation">Enter Building Name</string>
    <string name="doorNumberValidation">Enter Door Number</string>
    <string name="streetNameValidation">Enter Street Name</string>
    <string name="areaNameValidation">Enter Area Name</string>
    <string name="stateValidation">Select State</string>
    <string name="cityValidation">Select City</string>
    <string name="postalCodeValidation">Enter Postal Code</string>
    <string name="validpostalCode">Enter Valid Postal Code</string>
    <string name="landmarkValidation">Enter LandMark </string>
    <string name="consultaionFeeValidation">Enter Consultation Fee</string>
    <string name="clinicAdded">Clinic Added Successfully</string>
    <string name="clinicAddedError">Please try Again</string>
    <string name="clinicUpdated">Clinic Updated Successfully</string>
    <string name="Country">Country</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="passwordValidation">Please enter current password</string>
    <string name="newPasswordValidation">Please enter your new password</string>
    <string name="ValidNewPassword">Please confirm your new password</string>
    <string name="passwordAdded">Password Added Successfully </string>
    <string name="firstNameValidation">Enter First Name</string>
    <string name="middleNameValidation">Enter Middle Name</string>
    <string name="lastNameValidation">Enter Last Name</string>
    <string name="emialIdValidation">Enter Email ID</string>
    <string name="mobileValidation">Enter Mobile Number</string>
    <string name="practiceValidation">Select Practice Start Date</string>
    <string name="countryValidation">Select Country</string>
    <string name="profileUpdated">Profile Updated Successfully</string>
    <string name="order_id">Order ID :</string>
    <string name="my_order_status">Order Status :</string>
    <string name="order_date">Order Date :</string>
    <string name="payment_method">Payment Method :</string>
    <string name="shipping_method">Shipping Method :</string>
    <string name="approval">Approval</string>
    <string name="shipping">Shipping</string>
    <string name="processing">Processing</string>
    <string name="delivered">Delivered</string>
    <string name="cancel_order_button">Cancel Order</string>
    <string name="my_orders">My Orders</string>
    <string name="order_information_title">Order Information</string>
    <string name="no_orders_available">No Orders Available</string>
    <string name="orderinfo_dialog_message">"Are you Sure?\nYou want to Cancel Order {Order ID}."</string>
    <string name="my_calendar">My Calendar</string>
    <string name="availability">Availability</string>
    <string name="booked">Booked</string>
    <string name="myHolidays">My Holidays</string>
    <string name="noCalendars">No Calendar Entries</string>
    <string name="hintLocation">Location</string>
    <string name="hintDateOrPatient">Date | Patient Name</string>
    <string name="hintDate">DD/MM/YYYY</string>
    <string name="hintTime">HH:MM</string>
    <string name="nonWorkingDays">Non-Working Days</string>
    <string name="deleteCalendarMessage">Are you Sure?\nYou want to delete calendar entry.</string>
    <string name="deleteAppointmentMessage">Are you Sure?\nYou want to cancel booked appointment.</string>
    <string name="create_new_calendar">Create New Calendar</string>
    <string name="textFrom">From</string>
    <string name="textTo">To</string>
    <string name="day_wise_schedule">Day Wise Schedule</string>
    <string name="outpatientPrescription">Out Patient Prescriptions</string>
    <string name="diagnostic_report">Diagnostic Reports</string>
    <string name="hintDiagnosticSearch">Diagnostic Centre | Test Name | Clinic</string>
    <string name="doctorSearch">Docter Name | Clinic</string>
    <string name="doctorName">Dr. Name</string>
    <string name="hintHospitalOrClinic">Hospital/Clinic</string>
    <string name="bookmark">Bookmarked</string>
    <string name="bookmarkSearch">Patient Name | D.O.B | Mobile</string>
    <string name="patient_records">Records</string>
    <string name="out_patient_prescriptions">Out Patient Prescriptions</string>
    <string name="diagnostic_reports">Diagnostic Reports</string>
    <string name="hospitalization_reports">Hospitalization Reports</string>
    <string name="vaccination_reports">Vaccination Reports</string>
    <string name="patient_namedob">Patient Name | D.O.B</string>
    <string name="urine_test">Urine Tests</string>
    <string name="blood_test">Blood Tests</string>
    <string name="radiological_test">Radiological Tests</string>
    <string name="orange_connect_temperature">Administered at {temp}°C</string>
    <string name="custom_dialog_default_message">Ok</string>
    <string name="custom_dialog_no_message">No</string>
    <string name="custom_dialog_yes_message">Yes</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="balance_wallet">Wallet Balance:</string>
    <string name="Orange_points">Orange Points</string>
    <string name="Money_add">Add money</string>
    <string name="coupon">Coupons</string>
    <string name="card_save">Saved card</string>
    <string name="icon_facebook">\u0021</string>
    <string name="icon_google_plus">\u0022</string>
    <string name="icon_linkedin">\u0023</string>
    <string name="icon_check_mark_solid">\u002A</string>
    <string name="icon_down_arrow">\u0073</string>
    <string name="icon_plus">\u005A</string>
    <string name="icon_card">\u0062</string>
</resources>