<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingRight="30dp"
    android:paddingLeft="30dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/currentPassword"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:id="@+id/currentPassword"
        style="@style/EditTextStyleTransparent1"
        android:fontFamily="sans-serif"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:id="@+id/newPassword"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        style="@style/EditTextStyleTransparent1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:id="@+id/confirmPassword"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        style="@style/EditTextStyleTransparent1"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        style="@style/ButtonStyle"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>