<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorDecorationLight"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_wallet"
            android:layout_marginLeft="40dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs.2016"
            android:textStyle="bold"
            android:id="@+id/wallet_bal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:textSize="30dp"/>

        <RadioGroup
            android:id="@+id/toggle2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorDecorationLight"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/Orange_points"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/Addmoney"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:button="@null"
                android:text="@string/Money_add"
                android:gravity="center"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/coupon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:button="@null"
                android:text="@string/coupon"
                android:layout_weight="1"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/orange_container"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_above="@+id/relativeLayout"
        android:layout_below="@+id/linearLayout5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="onSavedCardClick"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout">

        <com.drughub.citizen.utils.DrughubIcon
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_card"
            android:textSize="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:id="@+id/save_card"
            android:text="@string/card_save"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"/>

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/draw_circle_grey"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

        <com.drughub.citizen.utils.DrughubIcon
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icon_right_arrow"
            android:textColor="@color/colorPrimary"
            android:text="@string/icon_down_arrow"
            android:textSize="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="13dp"
            android:layout_marginRight="13dp"
            android:rotation="270"/>

    </RelativeLayout>

</RelativeLayout>