<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDecorationLight"
    android:padding="@dimen/margin_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPasswordText"
            android:gravity="center"
            android:textSize="15dp"
            android:id="@+id/reset"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/Email"
            android:id="@+id/emailForForgot"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            style="@style/EditTextStyle"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout4">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:text="@string/submit"
        style="@style/ButtonStyle"
        android:layout_gravity="center"/>

    </FrameLayout>

</RelativeLayout>